2006-01-12 Lynn Garren

	HepPDT 1.26 is available at https://savannah.cern.ch/projects/hepmc/
	
	* HepMC/HeavyIon.h implements information requested by CMS
	* HepMC/GenParticle.h has pointer (null by default) to HeavyIon
	* code providing interfaces to Fortran common blocks has been moved
	out of libHepMC and into libHepMCfio

	--------------------  HepMC-01-02-26  ---------------------------------

	--------------------  HepMC-01-02-21  ---------------------------------

2005-04-27 Matt Dobbs and Giorgos
	* src/IO_HERWIG.cxx implemented a bug fix suggested by borut, 
	which keeps the remapping of daughters/motherrs from going "over
	the end" on herwig events (was noticed in the tauola events for 
	rome DC).

2004-08-04  David Quarrie  <David.Quarrie@cern.ch>

	* cmt/requirements: Change dependencies on CERNLIB and CLHEP 
        to AtlasCERNLIB and AtlasCLHEP to avoid name clashes


	--------------------  HepMC-01-02-19  ----(gcc 3.2 compatible)---------


2004-04-22  Matt Dobbs  <Matt.Dobbs@Cern.CH>

	* src/IO_HERWIG.cxx (HepMC): fixed bug reported by Hinchliffe in
	IO_HERWIG wherein (for the special case of min bias events only)
	number of entries in HEPEVT was being zero-ed by the IO_HERWIG
	class. Added extra protection in HEPEVT_Wrapper for this as well.


	--------------------  HepMC-01-02-18  ----(gcc 3.2 compatible)---------

2004-03-27  Matt Dobbs  <Matt.Dobbs@Cern.CH>

        Removed the #define statements that allow backwards compatibility
	with gcc 2.95, and specialized the 3.2 compliant iterators to be
	forward iterators such that they work properly with std
	algorithms.

	Thanks to Ulrik Egede for pointing this out.
	
	* HepMC/GenVertex.h, .cxx HepMC/GenEvent.h, .cxx: changed 
	std::forward_iterator<GenParticle*,ptrdiff_t>
	to
	std::iterator<std::forward_iterator_tag,GenParticle*,ptrdiff_t>
	for standard
	compliance, and removed #define statements.
	
	* HepMC/IO_Ascii.h,.cxx: changed open_mode to openmode for standard